// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeScene calls fetchUser at start 1`] = `<EmailRequired />`;

exports[`ExchangeScene renders email required screen correctly 1`] = `<EmailRequired />`;

exports[`ExchangeScene renders exchange correctly 1`] = `
<styled.div>
  <Connect(Menu) />
  <styled.section>
    <styled.div>
      <Connect(ExchangeContainer)
        from="BTC"
        to="ETH"
      />
    </styled.div>
  </styled.section>
</styled.div>
`;

exports[`ExchangeScene renders failure correctly 1`] = `
<DataErrorContainer
  onClick={[MockFunction]}
/>
`;

exports[`ExchangeScene renders getstarted correctly 1`] = `
<styled.div>
  <Connect(GetStarted) />
</styled.div>
`;

exports[`ExchangeScene renders loading correctly 1`] = `
<styled.div>
  <BlockchainLoader
    height="200px"
    width="200px"
  />
</styled.div>
`;

exports[`ExchangeScene renders not asked correctly 1`] = `
<styled.div>
  <BlockchainLoader
    height="200px"
    width="200px"
  />
</styled.div>
`;
